--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   english_words: ^3.1.0   # 新增了这一行
   http: ^0.11.3+16
   dio: ^2.0.7
+#  date_format: ^1.0.6
 
 dev_dependencies:
   flutter_test:
