--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
   assets:
     -  images/avatar.png
     -  images/bg.jpg
+    -  images/logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -66,12 +67,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: AliIcon
+      fonts:
+        - asset: lib/assets/icons/iconfont.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
